--- a/content/posts/2013-08-16-rsync.md
+++ b/content/posts/2013-08-16-rsync.md
@@ -1,7 +1,7 @@
 +++
 date = "Fri, 16 Aug 2013 23:14:00 +0000"
 title = "Rsync"
-slug = "[SLUG]"
+slug = "rsync"
 authors = [ "Ivan Lawrence" ]
 tags = [ "nerdler" ]
 categories = []
